# noe

./: .gitignore  TECHNICAL_BRIEF.md  pyproject.toml
configs/: base.yaml  critic.yaml  experts.yaml  router.yaml
configs/training/: stage_a.yaml  stage_b.yaml  stage_c.yaml
docker/: Dockerfile.sandbox  build_repo_images.py
noe_train/: __init__.py
noe_train/artifact_store/: __init__.py  store.py
noe_train/comm/: __init__.py  latent.py
noe_train/critic/: __init__.py  model.py
noe_train/data/: __init__.py  nemotron_swe.py  nemotron_terminal.py  rl_tasks.py  role_dataset.py  teacher_gen.py
noe_train/eval/: __init__.py  ablations.py  role_metrics.py  swe_bench.py
noe_train/experts/: __init__.py  base.py  coder.py  debugger.py  lora_config.py  planner.py  tester.py
noe_train/orchestrator/: __init__.py  episode.py  loop.py  state_compiler.py
noe_train/retrieval/: __init__.py  bm25.py  call_graph.py  chunk_candidates.py  symbol_index.py
noe_train/router/: __init__.py  model.py  packer.py  state_packet.py
noe_train/sandbox/: __init__.py  container.py  harness.py  patch_assembler.py  repo_state.py
noe_train/schema/: __init__.py  artifacts.py  budget.py  episode.py  (+1 more)
scripts/: eval_swe_bench.py  generate_planner_data.py  inspect_datasets.py  process_nemotron.py  run_episode.py  setup_gpu.sh  train_stage_a.py  train_stage_b.py  train_stage_c.py  validate_lora.py
tests/: test_artifact_store.py  test_checkpoint.py  test_latent_comm.py  test_patch_assembler.py  test_retrieval.py  test_reward.py  test_router.py  test_schema.py  test_state_compiler.py
(+12 files in other folders)
