[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noe-train"
version = "0.1.0"
description = "Network of Experts (NoE) — multi-expert SWE agent training"
requires-python = ">=3.9"
dependencies = [
    # Core
    "torch>=2.2",
    "transformers>=5.0",
    "peft>=0.10",
    "accelerate>=0.30",
    "datasets>=2.18",
    "safetensors>=0.4",
    # Qwen3.5 DeltaNet kernels
    "unsloth",
    "flash-linear-attention",
    "causal-conv1d>=1.4.0",
    # Serving
    "vllm>=0.4",
    # RL
    "trl>=0.8",
    # Retrieval
    "rank_bm25>=0.2",
    "libcst>=1.1",
    # Sandbox
    "docker>=7.0",
    "gitpython>=3.1",
    # Config
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # Logging
    "wandb>=0.16",
    # Eval
    "swebench>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["noe_train*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
